--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.scss
@@ -1,7 +1,7 @@
 @import url('https://cdn.jsdelivr.net/npm/lightgallery@2.0.0-beta.4/css/lightgallery.css');
 @import url('https://cdn.jsdelivr.net/npm/lightgallery@2.0.0-beta.4/css/lg-zoom.css');
 @import url('https://www.lightgalleryjs.com/css/lightgallery-bundle.css');
-
+@import '~lightgallery/scss/lightgallery';
 :host {
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   }
