--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'component/sort';
 @import 'component/unauthorized-page';
 @import 'smk';
+@import '~lightgallery/scss/lightgallery';
 
 
 .snackbar-error{
