--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -11,9 +11,11 @@
 .link {
   margin-top: 10px;
   margin-left: 20px;
-  padding: 4px;
+  padding-bottom: 1.5rem;
   color: #355992;
   font-size: 0.9rem;
+  font-weight: 600;
+  text-decoration: none; 
 }
 
 .top {
