heavier font weight on active tab

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -12,6 +12,11 @@ mat-tab-group {
   background-color: #003366 !important;
 }
 
+:host ::ng-deep .mat-tab-label-active {
+    font-weight: 700 !important
+}
+
+
 ::ng-deep .wildfires-tabs{
 
     padding-top: 1rem;
