--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -48,6 +48,11 @@
   height: 4px !important;
 }
 
+:host ::ng-deep .mat-tab-label-active {
+  font-weight: 700 !important
+}
+
+
 .page {
   background-color: #f2f2f2;
 }
