--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -9,16 +9,16 @@
     <div class="info-panel">
       <div><span class="label">Fire Number: </span><span>{{convertFireNumber(incident)}}</span></div>
       <div><span class="label">Last Updated: </span><span>{{incident.lastUpdatedTimestamp}}</span></div>
-      <div><span class="label">Discovered On: </span><span>{{incident.discoveryDate}}</span></div>
+      <div *ngIf="incident.discoveryDate"><span class="label">Discovered On: </span><span>{{incident.discoveryDate}}</span></div>
       <div *ngIf="incident.stageOfControlCode === 'OUT'"><span class="label">Declared Out: </span><span>{{incident.declaredOutDate}}</span></div>
     </div>
     <div class="divider"></div>
     <div class="info-panel">
       <div class="gutter"><span class="label">Size: </span><span>{{incident.incidentSizeEstimatedHa}} Hectares</span></div>
       <div class="paragraph-format">{{incident.incidentSizeDetail || 'Fire size is estimated and based on the last known mapped size in hectares. This information could be out-of-date at this time due to rapidly changing conditions'}}</div>
-      <div class="gutter"><span class="label">Location</span></div>
+      <div class="gutter" *ngIf="incident.incidentLocation"><span class="label">Location</span></div>
       <div class="paragraph-format">{{incident.incidentLocation}}</div>
-      <div class="gutter"><span class="label">Traditional Territory</span></div>
+      <div class="gutter" *ngIf="incident.traditionalTerritoryDetail"><span class="label">Traditional Territory</span></div>
       <div class="paragraph-format">{{incident.traditionalTerritoryDetail}}</div>
     </div>
     <!-- Evac Orders-->
