disable button - contact form

--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                         <div class="row submit-row">
-                            <button class="contact-submit" (click)="onSubmit()">Submit Message</button>
+                            <button class="contact-submit" (click)="onSubmit()" [disabled]="!contactForm.valid">Submit Message</button>
                         </div>
                     </div>
                 </div>
