Show header image in lower environments only

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -6,7 +6,7 @@
     <wf-header
         [config]="applicationConfig"
         [(state)]="applicationState"
-        [useAppLogo]="isAdminPage()"
+        [useAppLogo]="isAdminPage() || (!this.isAdminPage() && this.applicationConfig.environment.toLowerCase() !== '')"
         [useSystemAndUser]="isAdminPage()"
         [useSupportLink]="isAdminPage()"
         [useMenu]="true"
