Clipboard share button, tab header changes

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -5,10 +5,10 @@
     </div>
     <div>
       <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Information">
+        <mat-tab label="Overview">
           <incident-info-panel [incident]="incident" [evacOrders]="evacOrders" [areaRestrictions]="areaRestrictions"></incident-info-panel>
         </mat-tab>
-        <mat-tab label="Overview">
+        <mat-tab label="Details">
           <incident-overview-panel [incident]="incident"></incident-overview-panel>
         </mat-tab>
         <mat-tab label="Gallery">
