Stage of control header style

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -20,7 +20,8 @@
         <div class="content-panel-subtitle">{{getStageOfControlLabel(incident.stageOfControlCode)}}</div>
         <div class="content-panel-body">{{getStageOfControlDescription(incident.stageOfControlCode)}}</div>
         <div id="spacer" style="padding: 12px;"></div>
-        <div class="content-panel-subtitle">Suspected Cause: {{getCauseLabel(incident.generalIncidentCauseCatId)}}</div>
+        <h1>Suspected Cause</h1>
+        <div class="content-panel-subtitle">{{getCauseLabel(incident.generalIncidentCauseCatId)}}</div>
         <div class="content-panel-body">
           <div [innerHTML]="incident.incidentCauseDetail || getCauseDescription(incident.generalIncidentCauseCatId)"></div>
         </div>
