--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -182,6 +182,21 @@
   }
 }
 
+::ng-deep .app-logo-and-title {
+  flex-grow: 1;
+  justify-content: initial !important;
+  display: flex;
+  align-items: flex-end;
+
+  .mat-title {
+      font-size: 1.4rem;
+      color: white;
+      white-space: nowrap;
+      margin-left: 0.4rem;
+      margin-bottom: 0.575rem;
+  }
+}
+
 ::ng-deep .menu {
   display: none !important;
 }
