Add close to incident not found dialog

--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
@@ -1,8 +1,13 @@
 <div *ngIf="!loaded" class="loading-spinner">
   <mat-spinner [diameter]="40"></mat-spinner>
 </div>
-<div *ngIf="loaded && failedToLoad" class="loading-spinner">
-  <div>The Incident could not be found.</div>
+<div class="incident-details" *ngIf="loaded && failedToLoad">
+  <div class="header">
+    <div class="smk-command-button smk-move smk-icon"><div class="smk-command"><em title="Close Panel" (click)="close()" class="material-icons button">close</em></div></div>
+  </div>
+  <div class="loading-spinner">
+    <div>The Incident could not be found.</div>
+  </div>
 </div>
 <div class="incident-details" *ngIf="loaded && !failedToLoad">
   <div class="header">
