Fix search clear button, fix debounce on menu clear

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -11,8 +11,7 @@
 
         <div class="search-row">
             <div class="search-bar">
-                <input type="text" placeholder="Search by Location" aria-label="Search" matInput
-                    [formControl]="searchByLocationControl" [matAutocomplete]="auto" class="search-location">
+                <input type="text" placeholder="Search by Location" aria-label="Search" matInput [formControl]="searchByLocationControl" [matAutocomplete]="auto" class="search-location">
                 <button matSuffix mat-icon-button aria-label="Clear" class="input-clear-button" (click)="clearSearchLocationControl()">
                     <mat-icon>close</mat-icon>
                 </button>
