--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -43,11 +43,11 @@
         }
 
         .input-clear-button {
-          position: absolute;
-          margin-left: 250px;
+          margin-right: auto;
           line-height: 20px;
           font-size: 10px;
           color: #999999;
+          right: 38px;
         }
       }
 
