--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -69,7 +69,7 @@
       </mat-expansion-panel>
     </mat-accordion>
   </mat-tab>
-  <mat-tab label="Incident Information">
+  <mat-tab label="Incident Details">
     <ckeditor [editor]="Editor" [(ngModel)]="incident.incidentOverview" (ready)="onReady($event)"></ckeditor>
   </mat-tab>
   <mat-tab label="Image Gallery">
