Update main changelog and retry db deploy

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -184,7 +184,7 @@
             <div class="value-cell">{{row.lightningStarts}}</div>
             <div class="value-cell">{{row.humanStarts}}</div>
             <div class="value-cell">{{row.totalFires}}</div>
-            <div class="value-cell">{{row.areaBurned}}</div>
+            <div class="value-cell">{{row.areaBurned ? row.areaBurned.toLocaleString() : 0}}</div>
           </div>
         </div>
         <a class="learn-more-button" rel="noopener" target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres?keyword=fire&keyword=centre">Learn More about Statistics &amp; Geospatial Data</a>
