WFNEWS-751: Add response type, mappings for descriptions

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -25,6 +25,13 @@
         <div class="content-panel-body">
           <div [innerHTML]="incident.incidentCauseDetail || getCauseDescription(incident.generalIncidentCauseCatId)"></div>
         </div>
+        <div *ngIf="incident.responseTypeCode">
+          <h1>Response Type</h1>
+          <div class="content-panel-subtitle" style="text-transform: capitalize;">{{incident.responseTypeCode.toLowerCase()}}</div>
+          <div class="content-panel-body">
+            <div [innerHTML]="getResponseTypeDescription(incident.responseTypeCode)"></div>
+          </div>
+        </div>
       </div>
       <div>
         <!-- Image/video section: fetch from aws cache -->
