--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -6,7 +6,7 @@
     position: fixed;
     bottom: 8px;
     right: 0px;
-    z-index: 2;
+    z-index: 1000001;
     display: flex;
     transition: 0.5s;
 }
