--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -3,38 +3,59 @@
     [config]="applicationConfig"
     [(state)]="applicationState"
 >
-    <wf-header
-        [config]="applicationConfig"
-        [(state)]="applicationState"
-        [useAppLogo]="false"
-        [useSystemAndUser]="isAdminPage()"
-        [useSupportLink]="isAdminPage()"
-        [useMenu]="true"
-        [useLogoutButton]="isAdminPage()"
-        (bcLogoClick)="navigateToBcWebsite()"
-        (logoutClick)="logOutCurrentUser()"
-        (supportLinkClick)="navigateToBcSupport()"
-    ></wf-header>
+<div *ngIf="redirectToPublicMobile()">
+  <div class="pm-panel">
+    <div class="upper-half">
+        <div class="pm-logo">
+            <img src="/assets/icons/pm-logo.png" width="60" height="60" alt="image">
+        </div>
+        <div class="app-title">
+            <h4>BC Wildfire Service</h4>
+            <div>Province of British Columbia, Canada</div>
+            <div>Free On {{getAppStoreName()}}</div>
+        </div>
+    </div>
+    <div class="bottom-half">
+        For a better experience, download the BC Wildfire Service phone app for free.
+        <div style="padding-top:20px">
+            <button class="download-button" (click)="download()" >Download</button>
+        </div>
+    </div>
+</div>
+</div>
+<div *ngIf="!redirectToPublicMobile()">
+  <wf-header
+    [config]="applicationConfig"
+    [(state)]="applicationState"
+    [useAppLogo]="false"
+    [useSystemAndUser]="isAdminPage()"
+    [useSupportLink]="isAdminPage()"
+    [useMenu]="true"
+    [useLogoutButton]="isAdminPage()"
+    (bcLogoClick)="navigateToBcWebsite()"
+    (logoutClick)="logOutCurrentUser()"
+    (supportLinkClick)="navigateToBcSupport()"
+  ></wf-header>
 
-    <wf-menu
-        [menuItems]="appMenu"
-        [config]="applicationConfig"
-        [(state)]="applicationState"
-    ></wf-menu>
+  <wf-menu
+    [menuItems]="appMenu"
+    [config]="applicationConfig"
+    [(state)]="applicationState"
+  ></wf-menu>
 
-    <wf-menu-bar
-        [menuItems]="appMenu"
-        [config]="applicationConfig"
-        [(state)]="applicationState"
-    ></wf-menu-bar>
+  <wf-menu-bar
+    [menuItems]="appMenu"
+    [config]="applicationConfig"
+    [(state)]="applicationState"
+  ></wf-menu-bar>
 
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 
-    <wf-footer
-        [footerItems]="footerMenu"
-        [config]="applicationConfig"
-        [(state)]="applicationState"
-        (activeItemChanged)="navigateToFooterPage($event)"
-    ></wf-footer>
-
+  <wf-footer
+    [footerItems]="footerMenu"
+    [config]="applicationConfig"
+    [(state)]="applicationState"
+    (activeItemChanged)="navigateToFooterPage($event)"
+  ></wf-footer>
+</div>
 </wf-application>
