WFNEWS-837: Disable map save with no title, WFNEWS-820
Disabled save button on map dialog, also small fix to the back to dashboard link for WFNEWS-820

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -15,7 +15,8 @@
   color: #355992;
   font-size: 0.9rem;
   font-weight: 600;
-  text-decoration: none; 
+  text-decoration: none;
+  width: 155px;
 }
 
 .top {
