--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/edit-map-dialog/edit-map-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/edit-map-dialog/edit-map-dialog.component.html
@@ -7,7 +7,7 @@
     </mat-form-field>
   </div>
   <div class="dialog-actions" mat-dialog-actions>
-  	<button mat-raised-button color="primary" [mat-dialog-close]="true">Save</button>
+  	<button mat-raised-button color="primary" [mat-dialog-close]="true" [disabled]="data.attachment.attachmentTitle === null || data.attachment.attachmentTitle === ''">Save</button>
 	  <button mat-raised-button [mat-dialog-close]="false">Cancel</button>
   </div>
 </div>
