Fix responseType null check

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/summary-panel/summary-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/summary-panel/summary-panel.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="field size-quarter">
           <div class="label">Response Type</div>
-          <div><strong style="text-transform: capitalize;">{{incident.incidentData ? incident.incidentData.responseTypeCode.toLowerCase() : ''}}</strong></div>
+          <div><strong style="text-transform: capitalize;">{{incident.incidentData && incident.incidentData.responseTypeCode ? incident.incidentData.responseTypeCode.toLowerCase() : ''}}</strong></div>
         </div>
       </div>
     </fieldset>
