--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -63,9 +63,10 @@
             <div>{{collection? collection.totalRowCount: 0}} Results</div>
         </div>
         <div class="wildfire-checkboxs">
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="activeWildfiresInd" [disabled]="!outWildfiresInd">Active Wildfires</mat-checkbox>
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="outWildfiresInd" [disabled]="!activeWildfiresInd">Out Wildfires</mat-checkbox>
+            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="activeWildfiresInd">Active Wildfires</mat-checkbox>
+            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="outWildfiresInd">Out Wildfires</mat-checkbox>
             <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="wildfiresOfNoteInd">Wildfires of Note</mat-checkbox>
+            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="newFires">New</mat-checkbox>
         </div>
         <div *ngIf="loading">
           <mat-spinner style="margin: auto;" *ngIf="!loaded" [diameter]="50"></mat-spinner>
