--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -86,12 +86,12 @@
                 <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="outWildfiresInd">
                     Out Wildfires
                 </mat-checkbox>
+                <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="newFires">
+                    New Wildfires
+                </mat-checkbox>
                 <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="wildfiresOfNoteInd">
                     Wildfires of Note
                 </mat-checkbox>
-                <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="newFires">
-                    New Fires
-              </mat-checkbox>
             </section>
         </div>
                 <div class="field">
