--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -152,7 +152,7 @@
   app-root {
     display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 
   .qr-code {
@@ -169,7 +169,7 @@
 
 
 @media (min-width: 768px)and (max-width: 1023px) {
-  
+
   .panel {
     padding: 15px;
   }
