WFNEWS-658: Add newFires query/toggle to API, UI lists (#547)
* WFNEWS-658: Add newFires query/toggle to API, UI lists

* Move checkboxes after out toggles

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -80,11 +80,14 @@
         <div class="stage-of-control-checkbox-group">
             <mat-label>Choose Wildfires to display</mat-label>
             <section class="checkbox-group">
-                <mat-checkbox (change)="stageOfControlChanges($event)" value="note" [(ngModel)]="activeWildfiresInd" [disabled] = "!(outWildfiresInd)">
+                <mat-checkbox (change)="stageOfControlChanges($event)" value="note" [(ngModel)]="activeWildfiresInd">
                     Active Wildfires
                 </mat-checkbox>
-                <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="outWildfiresInd" [disabled]="!(activeWildfiresInd)">
+                <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="outWildfiresInd">
                     Out Wildfires
+                </mat-checkbox>
+                <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="newFires">
+                    New Wildfires
                 </mat-checkbox>
                 <mat-checkbox (change)="stageOfControlChanges($event)" value="all" [(ngModel)]="wildfiresOfNoteInd">
                     Wildfires of Note
