call Agol for area restions data only after incident got fetched

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
-  <mat-card class="info-card news-form-card">
+  <mat-card class="info-card news-form-card" *ngIf="incident.wildfireIncidentGuid? getAreaRestrictions() : null">
     <div *ngIf="areaRestrictions === null || areaRestrictions.length === 0">
       There are no current Area Restrictions
     </div>
