put footer back until decision being made

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -50,5 +50,12 @@
   ></wf-menu-bar>
 
   <router-outlet></router-outlet>
+
+  <wf-footer
+  [footerItems]="footerMenu"
+  [config]="applicationConfig"
+  [(state)]="applicationState"
+  (activeItemChanged)="navigateToFooterPage($event)"
+  ></wf-footer>
 </div>
 </wf-application>
