change to use ViewChild

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -65,7 +65,7 @@
               <span class="panel-title">Area Restrictions</span>
             </mat-panel-title>
         </mat-expansion-panel-header>
-        <area-restrictions-details-panel [incident]="incident" [formGroup]="incidentForm"></area-restrictions-details-panel>
+        <area-restrictions-details-panel #AreaRestrictionsPanel [incident]="incident" [formGroup]="incidentForm"></area-restrictions-details-panel>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-tab>
