Various minor non-compliance updates
Working live with Paul P. to clear out some filter issues

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -101,7 +101,7 @@
     </div>
 
 </div>
-<p class ="results-count" >{{collection? collection.totalRowCount : null}} Results</p>
+<p class ="results-count" >{{collection ? collection.totalRowCount : 0}} Results</p>
 
 
 
