--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
@@ -27,6 +27,9 @@
       font-weight: 700;
       color: #0e5fa9;
       padding-bottom: 10px;
+      a {
+        text-decoration: none;
+      }
     }
     .info-subtitle {
       font-size: 15px;
